--- a/public/index.html
+++ b/public/index.html
@@ -3,40 +3,49 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Tailwind v3 & DaisyUI Project</title>
+    <title>Revou To-DoList</title>
     <link rel="stylesheet" href="css/output.css" />
   </head>
-  <body class="bg-base-200 p-8">
-    <div class="navbar bg-base-100 shadow-xl">
-      <a class="btn btn-ghost text-xl">DaisyUI v3 Demo</a>
-    </div>
-
-    <div class="card w-96 bg-base-100 shadow-xl mx-auto mt-8">
-      <figure>
-        <img
-          src="https://img.daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.webp"
-          alt="Shoes"
-        />
-      </figure>
-      <div class="card-body">
-        <h2 class="card-title">Card Title (Tailwind v3)</h2>
-        <p>This card should look great with your chosen theme!</p>
-        <div class="card-actions justify-end">
-          <button class="btn btn-primary">Action</button>
-        </div>
-      </div>
-    </div>
-
-    <div class="flex justify-end p-4 gap-2">
-      <input
-        type="text"
-        placeholder="Type here"
-        class="input input-bordered mt-8 max-w-xs"
-      />
-    </div>
+  <body class="h-screen">
+    <!-- header -->
+    <nav class="navbar flex-none">
+      <details class="dropdown dropdown-right">
+        <summary tabindex="0" class="btn btn-square btn-ghost">
+          <div class="w-10 rounded-full">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              class="inline-block w-6 h-6 stroke-current"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M4 6h16M4 12h16M4 18h16"
+              ></path>
+            </svg>
+          </div>
+        </summary>
+        <ul
+          tabindex="0"
+          class="mt-3 z-[1] p-2 shadow menu menu-sm dropdown-content rounded-box w-32"
+        >
+          <li class="them-item" theme="light"><a>light</a></li>
+          <li class="them-item" theme="dark"><a>Dark</a></li>
+          <li class="them-item" theme="cupcake"><a>Cupcake</a></li>
+          <li class="them-item" theme="luxury"><a>Luxury</a></li>
+          <li class="them-item" theme="retro"><a>Retro</a></li>
+          <li class="them-item" theme="dracula"><a>Dracula</a></li>
+        </ul>
+      </details>
+    </nav>
+    <!-- hero section -->
+    <main class="flex flex-col items-center justify-evenly min-h-screen">
+      <header class="text-3xl font-bold">To-DoList - Ali</header>
+    </main>
 
     <!-- script -->
-
     <script src="js/script.js"></script>
   </body>
 </html>
