--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
       rel="stylesheet"
     />
   </head>
-  <body class="h-screen">
+  <body class="abosolute">
     <!-- header -->
-    <nav class="navbar flex-none">
+    <nav class="navbar flex">
       <details class="dropdown dropdown-right">
         <summary tabindex="0" class="btn btn-circle btn-ghost">
           <div class="w-10 rounded-full">
@@ -78,31 +78,38 @@
         <!-- Todo Action -->
         <section class="flex justify-between p-2">
           <div class="flex gap-2">
-            <button
-              type="button"
-              id="clear-completed-button"
-              class="btn btn-ghost"
-            >
-              Show Completed
-            </button>
-            <button
-              type="button"
-              id="clear-all-button"
-              class="btn btn-ghost"
-              onclick="deleteAllTasks()"
-            >
-              Clear All
-            </button>
+            <details class="dropdown dropdown-right">
+              <summary class="m-1 btn btn-ghost">Filter</summary>
+              <ul
+                tabindex="0"
+                class="p-2 shadow menu dropdown-content bg-base-100 rounded-box w-52"
+              >
+                <li id="filter-completed" onclick="showCompletedTasks()">
+                  <a>completed</a>
+                </li>
+                <li id="filter-all" onclick="displayTasks()">
+                  <a>beranda</a>
+                </li>
+              </ul>
+            </details>
           </div>
+          <button
+            type="button"
+            id="clear-all-button"
+            class="btn btn-ghost"
+            onclick="deleteAllTasks()"
+          >
+            Clear All
+          </button>
         </section>
         <!-- Todo List -->
-        <section class="m-auto text-center">
+        <section class="m-2 text-center p-2">
           <header>
             <h2 class="text-2xl font-bold">Tasks</h2>
           </header>
           <!-- Task List -->
           <div id="task-list">
-            <p>Task is Empty!</p>
+            <p>Belum Ada Tugas Nih!</p>
           </div>
         </section>
       </main>
